Table user {
  id varchar(40) [pk, note: 'facebook id']
  name varchar(50) [not null]
  is_page boolean [default: false]
  join_time datetime [not null, note: 'facebook joining time']
  friends int [not null]
  groups int [not null]
  lives varchar(30) [default: null]
  work varchar(200) [default: null, note: 'if page, page description']
  study varchar(200) [default: null]
}

Table group {
  id bigint [pk, note: 'facebook id']
  name varchar(50) [unique]
  created_on datetime [not null]
}

Table member {
  id int [pk, increment]
  user varchar(40) [ref: > user.id]
  group bigint [ref: > group.id]
  join_time datetime [not null]
  leave_time datetime [default: null]
  member_type member_type [default: 'member']
}

Enum member_type {
  member
  admin
  moderator
  creator
  banned
}

Table answer {
  id int [pk, increment]
  member int [ref: > member.id]
  question varchar(100) [not null]
  answer varchar(100) [not null]
}

Table special_member {
  id int [pk, increment]
  member int [ref: > member.id]
  join_time datetime [not null]
  leave_time datetime [default: null]
  member_type member_type [not null]
}

Table post {
  id bigint [pk, note: 'facebook id']
  group bigint [ref: > group.id]
  user varchar(40) [ref: > user.id]
  time datetime [not null]
  type post_type [default: 'post']
  text varchar(1000) [not null]
  likes int [not null]
  shares int [not null]
}

Enum post_type {
  post
  poll
  first
  link
  share
  with
}

Table comment {
  id bigint [pk, note: 'facebook id']
  post bigint [ref: > post.id]
  comment bigint [null, ref: > comment.id, note: 'if reply, the comment which it is reply of']
  user varchar(40) [ref: > user.id]
  time datetime [not null]
  text varchar(1000) [not null]
  likes int [not null]
}
